<resources>
    <string name="app_name">WeatherQuery</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">9999</string>
    <string name="now">Current Conditions</string>
    <string name="app_warning">City name or spelling incorrect</string>
	<string name="edittext_hint">Enter city name</string>
	<string name="button_text">OK</string>
	<string name="cityname">BLOOMINGTON</string>
	<string name="countryname">United States of America</string>
	<string name="description">Sky is clear</string>
	<string name="maximumtemp">0</string>
	<string name="maximumtemptext">Max.Temp</string>
	<string name="minimumtemp">0</string>
	<string name="minimumtemptext">Min.Temp</string>
	<string name="currenttemp">0</string>
	<string name="latitude">Latitude</string>
	<string name="longitude">Longitude</string>
	<string name="humidity">Humidity</string>
	<string name="windspeed">Wind Speed</string>
	<string name="press">Pressure</string>
	<string name="latitude_value">000.00</string>
	<string name="longitude_value">000.00</string>
	<string name="humidity_value">000.00</string>
	<string name="windspeed_value">000.00</string>
	<string name="press_value">000.00</string>
	<string name="wind_u">mps</string>
	<string name="press_u">hPa</string>
	<string name="humid_u">%</string>
	<string name="get_forecast">Get Forecast</string>
	<string name="day1_temp">Temperature</string>
	<string name="day1_min_temp">Min.Temperature</string>
	<string name="day1_max_temp">Max.Temperature</string>
	<string name="conditions_1">Conditions</string>
	<string name="windspeed_1">Wind-Speed</string>
	<string name="humidity_1">Humidity</string>
	<string name="day2_temp">Temperature</string>
	<string name="day2_min_temp">Min.Temperature</string>
	<string name="day2_max_temp">Max.Temperature</string>
	<string name="conditions_2">Conditions</string>
	<string name="nocity">Please enter the name of a city to proceed</string>
	<string name="network_message">Please check your Network Connection</string>
	<string name="city_network_message">Please enter a city name and check your Network Connection</string>
	<string name="app_introduction">Note:\nType the full name of any city/town except for the major cities located in Europe, India and US.</string>
</resources>